<resources>
    <string name="app_name">BantuSiswa</string>
    <string name="header">header</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No Hp</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
