<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/bg_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/header"
        android:scaleType="fitXY"
        android:src="@drawable/img_header_register" />

    <ImageView
        android:id="@+id/bg_footer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/header"
        android:scaleType="fitXY"
        android:src="@drawable/img_footer_register" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:layout_marginTop="26dp"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bg_footer"
        android:layout_below="@id/bg_header"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="22dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_regis_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_subtitle_text"
                    android:text="@string/nama_lengkap" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="16">

                    <EditText
                        android:id="@+id/et_regis_nama"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>




                <TextView
                    android:id="@+id/tv_regis_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/font_subtitle_text"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/et_regis_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tv_regis_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/font_subtitle_text"
                    android:text="@string/password" />



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:counterMaxLength="8">

                    <EditText
                        android:id="@+id/et_regis_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_regis_nohp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/font_subtitle_text"
                    android:text="@string/no_hp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    android:layout_marginBottom="20dp">

                    <EditText
                        android:id="@+id/et_regis_nohp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login_doregis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_style_button"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/open_sans_regular"
                    android:layout_marginTop="12dp"
                    android:text="@string/register"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>



</RelativeLayout>